# econia

./: .gitbook.yaml  .gitignore  .gitmodules  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DSS_CHANGELOG.md  LICENSE.md  README (1).md  README.md  SUMMARY.md  conda.yml  cspell.json  exchange.Dockerfile  indexer.Dockerfile  pyproject.toml  scripts.sh  shell.nix  ss.sh  taplo.toml
src/move/econia/deprecated/: BST.move  Cargo.toml  Coins.move
src/move/ultima/: Cargo.toml  Move.toml  ss.sh
src/move/ultima/deprecated/: Coins.move
src/move/ultima/sources/: AlnokiBST.move  AssetCoin.move  BST.move  BasicCoin.move  Book.move  Coin.move  Coins.move  HelloBlockchain.move  HelloBlockchainTest.move  OddCoin.move  Order.move  README.md  TicketTutorial.move  User.move  coins.move  ultima.move
src/move/ultima/src/: lib.rs  main.rs  move_unit_tests.rs
src/python/sdk/: .gitignore  README.md  mypy.ini  output_events.json  output_expect.json  private_keys.json  pyproject.toml
src/python/sdk/docs/: econia_sdk.html  index.html  search.js
src/python/sdk/econia_sdk/: README.md  __init__.py  entry.py  lib.py  types.py
src/python/sdk/examples/: event.py  games.py  market.py  trade.py  view.py
src/python/sdk/src/: entry.py  lib.py
src/rust/: .dockerignore  .gitignore  Cargo.toml  README.md  generate_sqlx.sh  rustfmt.toml  setup.cfg
src/rust/.cargo/: config.toml
src/rust/.sqlx/: query-008767291a4a3e679f5f53891e2383a7053812b75ffa233ca1a1b4a8de7bff36.json  query-0255ad747dc024c2dbacb2abcf67aacac12fc39bc48e7f209d81fa9ee8605416.json  query-05669057d962f324dc7d4149321a7b38651e9bfa7a615857c2bfc26a0450ef3c.json  query-06b7a15cac445380a659f782fd2d6dc3ae7974dc00f3e2bc4d976232d7263946.json  query-078b270e79d36efce4abbac15749a19aba42e1e7812129ce7b86faeb1c528ab3.json  query-0aeef92366dfdf782ae8792d4969778ad3ad01b97b3d3c0b44625d7381186c17.json  query-0c4b742ba8bc837d6e40b4a7fde06c786067ad6a68bf55651251be73b15c2655.json  query-10d7bd677f28cc4c22f26c20ec959d7ee40e1d05c596cbaec7330ed39480ebb9.json  query-11d70239c880d7709c684a2cbb193a0a15d3690332aee4879cb0f9d402bf8c99.json  query-134c2c7da439c08342c321b6b251da499a816cee2faf3e7de28b64a6297782c1.json  query-15bc40d65432965db316e16575f37e0da9f352b1149a19eb81cb9a5d74d1e3cc.json  query-16a97d275816539edd170312e678908210c38d52775966fb33ba2fe035713b96.json  query-16b0455fc8815c8c208c82e48fdea9fb261abfb77f879a0241a39164a84eafed.json  query-16de9c85644799f479e199c104b8f05b21a42b5969ffd69773eabb52d807b380.json  query-1a9b6463bf7512b721aa7d4a0fb634671f8e109f769d4b0875a70acd91ff9620.json  query-1a9bea8011fb7d313ec85fb1e1942827ef8f00da6e6a87597356374af36b0018.json  query-1bfeead914161f3f08c43f6fffad3f955f66c0c975803ca21b9dfe465c376978.json  query-1c7c3b6ddbdd74af168cc3cb3a6d7cf4da58ebe4f3ba32dfb84f5d6ad9234360.json  query-1d800957f751585af06c87a04e236196b46f2328cd97b7666b508a84b1f86cf7.json  query-1db241490f8a27ebdb2e3be8b3ac3f2e3af97adc8a70ac3b29ecccb96344074d.json  query-2562ab77b43dcfdcedae8c6a9e38e2db614ab70dda17f66dfb04357c922583ee.json  query-27c9d7ad7295379478defbe176649938af328e0389621537ca6cc55642240dc4.json  query-286f3643f986ffa981d3a6dc11bf840ea40a3530acfaaf6f509444f326603d5f.json  query-29daaf7791c139f3a8aa9361277a5afe0b3d95b720e066b0524cd01e78c3839f.json  query-2c7e628aeab4485077cdc51042ad5b6c562b957938f990009fc78112d828bf90.json  query-2c8c707d2052da3d6646ed4419f55396b9380cadf4e34a139b05bcd44d5a77ca.json  query-2dae14ec09e4bfa499fa0749a15e708830c7b8c40da92ad4d2ef5b5fc1f668e7.json  query-2de84d8c53675f9c8ea0f7cc72b52d373a68c31ce699a8dd28c35e32fffa039e.json  query-2e27bf439eecb523847bd987fd0b275d2d6e129883b9c37236503ee0dc679998.json  query-2e5fd62d1e9a5c85e04e1d5a1f1c6a1ba771280689401d30e9382fb2c5adcc4d.json  query-2edfd0fdf08dc902ae1db2a7fe607cfe1eb4b38d21ee243ec75bb1521c7e244e.json  query-2fee5bc2b524e3fc3d4b7a43dcf8822f6f38717aea6a00f8857f97ab48fdeb22.json  query-303e1d119a4317cbdf819e5e3d48ffa879ee02fd606740b3da11d9b6ad2fbe0f.json  query-312f0b35883354ae7d095433bd13bd7ac5ff2dc760521d52bc8c2836db36bc65.json  query-346d379805712f91881a12526a30d9324dda082393bf1cc764667fac7ee8cbc2.json  query-35dd41a38d1927a3f3b4b046873f74ff1e27a13677b742932ceb8d423d3649d4.json  query-362d4d714c86fbc6d21495949972a9b959eaa1eac4585f57feb3013a0baf6638.json  query-363b6959dbe7fe8397127b37d349cb65b3fecfa472b29de58c5ef402bbc29326.json  query-36bc1483ede8baf354235e377024db3ba337e8853530e71067b18d84f712937a.json  query-37a86a51f30bdd9f5a6776841a6984aecda7033b2d61e4e94496de80777cb26a.json  (+201 more)
src/rust/aggregator/: Cargo.toml  README.md
src/rust/aggregator/migrations/: 20230825133701_markets_registered_per_day.down.sql  20230825133701_markets_registered_per_day.up.sql
src/rust/aggregator/src/: data.rs  dbtypes.rs  lib.rs  main.rs  pipeline.rs  pipelines.rs  util.rs
src/rust/aggv2/: Cargo.toml  README.md
src/rust/aggv2/src/: feed.rs  main.rs  numeric.rs
src/rust/api/: Cargo.toml  Dockerfile  sqlx-data.json
src/rust/api/.sqlx/: query-07f80d3c52b0b6a71e2eadf3ff79980c5097678027fb7f4900b779f8766f430c.json  query-2015247b0c3cae8f90715a5fa1f9d682f8ddc3dc67097599a7c0ddccf73eb75c.json  query-2030d3274eb4def4cba7ae203f4c46a18042b0f345717528d5dfe7bed0ed5c1a.json  query-2a38e3095c7b4c79aaea71cb1e3a59feeb2502cf6bae6ebe9bd076c77c9cc8c4.json  query-4369cf7d1a48f8eff2d3c66e731981879e1eb3a88e51ca0bc97340b1e1aa8625.json  query-5119c4623801ae6ef9e2c0ff01d77882bb44cb883f12bc9bb0c00f296df3a773.json  (+16 more)
src/rust/api/src/: error.rs  main.rs  util.rs  (+2 more)
src/rust/db/: Cargo.toml  pyproject.toml
src/rust/dbv2/: .gitignore  Cargo.toml  README.md  check_db.sh  competition-additional-exclusions-template copy.json  competition-additional-exclusions-template.json  competition-additional-inclusions-template.json  competition-metadata-template.json  diesel.toml  models.md  sql-formatter-config.json
src/rust/docs/: websocket.md
src/rust/e2e/: Cargo.toml
src/rust/indexer/: Cargo.toml  econia_config.template  fullnode_config.template
src/rust/mqtt-publisher/: Cargo.toml
src/rust/processor/: Cargo.toml  start.sh
src/rust/sdk/: Cargo.toml  README.md
src/rust/types/: Cargo.toml
(+1226 files in other folders)
