[tool.poetry]
name = "econia-formatters"
version = "1.0.0"
description = "Python-based formatters not supported by brew"
authors = ["Econia Labs"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.0.1"
mdformat = "0.7.16"
mdformat-frontmatter = "2.0.1"
mdformat-gfm = "0.3.5"
mdformat-myst = "0.1.5"
sqlfluff = "^2.0.3"
