[workspace]
members = ["aggregator", "api", "db", "types"]
exclude = ["dependencies", "sdk"]

[workspace.dependencies]
axum = "0.6.18"
bigdecimal = "^0.3.0"
chrono = "^0.4.24"
diesel = "2.1.0"
diesel-derive-enum = "2.1.0"
dotenvy = "^0.15.6"
envy = "^0.4.2"
field_count = "0.1.1"
futures-util = "^0.3.26"
once_cell = "1.18.0"
redis = "0.23.0"
regex = "1.9.1"
serde = { version = "^1.0.149", features = ["derive"] }
serde_json = "^1.0.93"
sqlx = { version = "^0.6.2", features = ["runtime-tokio-rustls"] }
thiserror = "^1.0.38"
tokio = "^1.25.0"
tower = "0.4.13"
tower-http = "0.4.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
