[workspace]
resolver = "2"
members = ["aggregator", "api", "db", "types", "sdk"]
exclude = ["dependencies"]

[workspace.dependencies]
axum = "0.6.19"
bigdecimal = "0.3.1"
chrono = "0.4.26"
diesel = "2.1.0"
diesel-derive-enum = "2.1.0"
dotenvy = "0.15.7"
envy = "0.4.2"
field_count = "0.1.1"
futures-util = "0.3.28"
once_cell = "1.18.0"
redis = "0.23.0"
regex = "1.9.1"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls"] }
thiserror = "1.0.44"
tokio = "1.29.1"
tower = "0.4.13"
tower-http = "0.4.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"


# Work around dependency issues.
# Check this: https://github.com/aptos-labs/aptos-core/blob/4bddd6ca5b65b12f1890ead29392e76b971ad031/Cargo.toml#L703-L710
[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
