[workspace]
resolver = "2"
members = [
  "aggregator",
  "dbv2",
  "e2e",
  "e2e/e2e-proc-macro",
  "e2e/metadata",
  "mqtt-publisher",
  "types",
  "sdk",
  "sdk/example", "aggv2",
]
exclude = ["api", "db", "dependencies"]

[workspace.package]
authors = ["Econia Labs <developers@econialabs.com>"]
license = "Business Source License"
homepage = "https://www.econialabs.com/"
publish = false
repository = "https://github.com/econia-labs/econia"
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
aptos-indexer-protos = { path = "dependencies/aptos-indexer-processors/rust/aptos-indexer-protos" }
server-framework = { path = "dependencies/aptos-indexer-processors/rust/server-framework" }
aptos-moving-average = { path = "dependencies/aptos-indexer-processors/rust/moving-average" }
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.10.1" }

anyhow = { version = "1.0.62", features = ["backtrace"] }
async-trait = "0.1.53"
axum = "0.6.19"
backtrace = "0.3.58"
base64 = "0.13.0"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
bigdecimal = { version = "=0.4.3", features = ["serde"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.3.5", features = ["derive", "unstable-styles"] }
diesel = { version = "=2.1.6", features = [
    "chrono",
    "postgres",
    "r2d2",
    "numeric",
    "serde_json",
] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
diesel-derive-enum = "2.1.0"
dotenvy = "0.15.7"
envy = "0.4.2"
field_count = "0.1.1"
futures = "0.3.29"
futures-util = "0.3.28"
gcloud-sdk = { version = "0.20.4", features = [
    "google-cloud-bigquery-storage-v1",
] }
google-cloud-pubsub = "0.18.0"
google-cloud-googleapis = "0.10.0"
hex = "0.4.3"
once_cell = "1.18.0"
redis = "0.23.0"
regex = "1.9.1"
pbjson = "0.5.1"
prometheus = { version = "0.13.0", default-features = false }
prost = "0.11.9"
prost-types = "0.11.9"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.8.24"
sha2 = "0.9.3"
sha3 = "0.9.1"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls"] }
sqlx-postgres = "0.7.4"
tempfile = "3.3.0"
toml = "0.7.4"
thiserror = "1.0.44"
tonic = { version = "0.9.2", features = [
    "tls",
    "tls-roots",
    "transport",
    "prost",
    "gzip",
    "codegen",
] }
tokio = "1.29.1"
tower = "0.4.13"
tower-http = "0.4.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
unescape = "0.1.0"
warp = { version = "0.3.5", features = ["tls"] }


# Work around dependency issues.
# Check this: https://github.com/aptos-labs/aptos-core/blob/4bddd6ca5b65b12f1890ead29392e76b971ad031/Cargo.toml#L703-L710
[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
