# Largely modeled off of aptos-core/aptos-move/move-examples/Cargo.toml

[package]
name = 'ultima'
version = '0.0.0' # Should use SemVer
edition = '2018'

[dependencies]
structopt = '0.3.21'

[dependencies.aptos-vm]
git = 'https://github.com/aptos-labs/aptos-core'
rev = 'refs/remotes/origin/HEAD'

[dependencies.aptos-workspace-hack]
git = 'https://github.com/aptos-labs/aptos-core'
rev = 'refs/remotes/origin/HEAD'

[dependencies.move-compiler]
git = 'https://github.com/move-language/move'
rev = 'refs/remotes/origin/HEAD'

[dependencies.move-package]
git = 'https://github.com/move-language/move'
rev = 'refs/remotes/origin/HEAD'

[dependencies.move-stdlib]
git = 'https://github.com/move-language/move'
rev = 'refs/remotes/origin/HEAD'

[dependencies.move-unit-test]
git = 'https://github.com/move-language/move'
rev = 'refs/remotes/origin/HEAD'

[dev-dependencies]
tempfile = '3.2.0'

[dev-dependencies.move-cli]
git = 'https://github.com/move-language/move'
rev = 'refs/remotes/origin/HEAD'