[tool.poetry]
name = "econia-sdk"
version = "2.0.0"
description = ""
authors = ["Econia Labs <developers@econialabs.com>"]
readme = "README.md"
packages = [{ include = "econia_sdk" }]

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
aptos-sdk = "^0.6.4"
python = "^3.8"
httpx = "0.23.0"
rel = "^0.4.9"
pyjwt = "1.7.1"
paho-mqtt = "2.0.0"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.2.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.0.0"

[tool.poetry.scripts]
trade = "examples.trade:start"
event = "examples.event:start"
games = "examples.games:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
