[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
aptos-sdk.workspace = true

anyhow.workspace = true
async-trait = "0.1.73"
bigdecimal = { version = "0.3.1", features = ["serde"] }
chrono.workspace = true
clap = { workspace = true, features = ["derive", "string"] }
dotenvy.workspace = true
env_logger = "0.10.0"
log = "0.4.20"
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["postgres", "chrono", "bigdecimal"] }
sqlx-postgres.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2.4.1"
reqwest = "0.11.22"
