[package]
name = "aggv2"
version = "0.1.0"
authors.workspace = true
license.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait = "0.1.73"
bigdecimal = { version = "0.3.1", features = ["serde"] }
chrono.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["postgres", "chrono", "bigdecimal"] }
sqlx-postgres.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
