[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["query", "ws"] }
bigdecimal = { workspace = true }
chrono = { workspace = true }
db = { path = "../db", features = ["sqlx"] }
dotenvy = { workspace = true }
envy = { workspace = true }
futures-util = { workspace = true }
once_cell = "1.18.0"
redis = { version = "0.23.0", features = ["tokio-rustls-comp", "r2d2"] }
regex = "1.9.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "bigdecimal",
    "chrono",
    "macros",
    "offline",
    "postgres",
    "runtime-tokio-rustls",
    "time",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.1", features = [
    "compression-br",
    "cors",
    "trace",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
types = { path = "../types", features = ["serde"] }

[dev-dependencies]
hyper = "0.14.27"
rand = { version = "0.8.5", features = ["std_rng"] }
tokio-tungstenite = "0.19.0"
url = "2.4.0"
