[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["query", "ws"] }
bigdecimal = { workspace = true }
chrono = { workspace = true }
db = { path = "../db", features = ["sqlx"] }
dotenvy = { workspace = true }
envy = { workspace = true }
futures-util = { workspace = true }
once_cell = { workspace = true }
redis = { workspace = true, features = ["tokio-rustls-comp", "r2d2"] }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "bigdecimal",
    "chrono",
    "macros",
    "postgres",
    "runtime-tokio-rustls",
    "time",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true, features = [
    "compression-br",
    "cors",
    "trace",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
types = { path = "../types", features = ["serde"] }

[dev-dependencies]
hyper = "0.14.27"
rand = { version = "0.8.5", features = ["std_rng"] }
tokio-tungstenite = "0.20.0"
url = "2.4.0"
