[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.19", features = ["query", "ws"] }
bigdecimal = { version = "0.3.1", features = ["serde"] }
chrono = { version = "0.4.26", features = ["clock", "serde"] }
db = { path = "../db", features = ["sqlx"] }
dotenvy = "0.15.7"
envy = "0.4.2"
futures-util = "0.3.28"
once_cell = "1.18.0"
redis = { version = "0.23.0", features = ["tokio-rustls-comp", "r2d2"] }
regex = "1.9.1"
serde = { version = "1.0.175", features = ["derive", "rc"] }
serde_json = { version = "1.0.103", features = ["preserve_order"] }
sqlx = { version = "0.7.1", features = [
    "bigdecimal",
    "chrono",
    "macros",
    "postgres",
    "runtime-tokio-rustls",
    "time",
] }
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = [
    "compression-br",
    "cors",
    "trace",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
types = { path = "../types", features = ["serde"] }

[dev-dependencies]
hyper = "0.14.27"
rand = { version = "0.8.5", features = ["std_rng"] }
tokio-tungstenite = "0.20.0"
url = "2.4.0"
