[package]
name = "db"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { workspace = true }
chrono = { workspace = true }
diesel = { version = "2.1.0", features = ["chrono", "numeric", "postgres"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
field_count = "0.1.1"
serde = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
thiserror = { workspace = true }
types = { path = "../types" }

[dev-dependencies]
dotenvy = { workspace = true }
envy = { workspace = true }
indicatif = "0.17.5"
rand = { version = "0.8.5", features = ["std_rng"] }
serde = { workspace = true }

[features]
sqlx = ["dep:sqlx"]
