[package]
name = "db"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true, features = ["chrono", "numeric", "postgres"] }
diesel-derive-enum = { workspace = true, features = ["postgres"] }
field_count = { workspace = true }
serde = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
thiserror = { workspace = true }
types = { path = "../types" }

[dev-dependencies]
dotenvy = { workspace = true }
envy = { workspace = true }
indicatif = "0.17.5"
rand = { version = "0.8.5", features = ["std_rng"] }
serde = { workspace = true }

[features]
sqlx = ["dep:sqlx"]
