[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
econia-sdk = { path = "../sdk" }
e2e-proc-macro = { path = "./e2e-proc-macro" }
metadata = { path = "./metadata" }
aptos-sdk.workspace = true

anyhow.workspace = true
clap.workspace = true
reqwest = "0.11"
sqlx = { workspace = true, features = ["postgres"] }
tokio = { workspace = true, features = ["full"] }
colored = "2.0.4"
indicatif = "0.17.6"
futures.workspace = true
rand = "0.7"
serde.workspace = true
serde_json.workspace = true

