[package]
name = "mqtt-publisher"
version = "0.1.0"
authors.workspace = true
license.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bigdecimal.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["postgres", "chrono", "bigdecimal"] }
sqlx-postgres.workspace = true
tokio = { workspace = true, features = ["full"] }
rumqttc = { version = "0.23.0", features = ["url", "use-rustls", "websocket"] }
