[package]
name = "econia-sdk"
version = "1.0.0"
edition = "2021"
categories = ["crypto", "defi", "trading", "sdk"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "SDK for interacting with Econia on Aptos"
homepage = "https://econialabs.com"
documentation = "https://econia.dev"
repository = "https://github.com/econia-labs/econia"
keywords = ["aptos", "econia", "dex", "clob", "sdk", "blockchain"]

[dependencies]
aptos-api-types = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.7.2" }
aptos-sdk.workspace = true
econia-types = { package = "econia-types", path = "../types", features = ["serde"] }
futures = "0.3.24"
hex = { version = "0.4.3" }
reqwest = { version = "0.11.11" }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.85" }
serde_yaml = { version = "0.9.10" }
thiserror = "1.0.40"

[lib]
path = "src/lib.rs"
