[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
thiserror = { workspace = true }

[features]
serde = ["dep:serde", "bigdecimal/serde", "chrono/serde"]
sqlx = ["dep:sqlx"]

[dev-dependencies]
serde_json = { workspace = true }
