[package]
name = "econia-types"
version = "1.0.0"
edition = "2021"
categories = ["crypto", "defi", "trading", "sdk"]
license = "MIT OR Apache-2.0"
description = "Types for interacting with Econia on Aptos"
homepage = "https://econialabs.com"
documentation = "https://econia.dev"
repository = "https://github.com/econia-labs/econia"
keywords = ["aptos", "econia", "dex", "clob", "sdk", "blockchain"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
serde = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
thiserror = { workspace = true }

[features]
serde = ["dep:serde", "chrono/serde"]
sqlx = ["dep:sqlx"]

[dev-dependencies]
serde_json = { workspace = true }
