# Modeled off `aptos-core/aptos-move/move-examples/Cargo.toml`

[package]
name = 'econia'
version = '0.1.0' # Per SemVer
edition = '2018'

[dependencies]
structopt = '0.3.21'

[dependencies.aptos-vm]
git = 'https://github.com/aptos-labs/aptos-core'
rev = 'refs/remotes/origin/HEAD'

[dependencies.aptos-workspace-hack]
git = 'https://github.com/aptos-labs/aptos-core'
rev = 'refs/remotes/origin/HEAD'

[dependencies.move-compiler]
git = 'https://github.com/move-language/move'
rev = '476305d239ce6afafce15a297c8c3839dd8465b6'

[dependencies.move-package]
git = 'https://github.com/move-language/move'
rev = '476305d239ce6afafce15a297c8c3839dd8465b6'

[dependencies.move-stdlib]
git = 'https://github.com/move-language/move'
rev = '476305d239ce6afafce15a297c8c3839dd8465b6'

[dependencies.move-unit-test]
git = 'https://github.com/move-language/move'
rev = '476305d239ce6afafce15a297c8c3839dd8465b6'

[dev-dependencies]
tempfile = '3.2.0'

[dev-dependencies.move-cli]
git = 'https://github.com/move-language/move'
rev = '476305d239ce6afafce15a297c8c3839dd8465b6'