[package]
name = "sdk-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
econia-sdk = { path = ".." }
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }

anyhow = "1"
clap = { version = "4.3", features = ["derive"] }
rand = "0.7"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
